# crypto_server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.claude/: settings.json
.github/workflows/: deploy.yml
config/: default.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  rest.rs  session.rs  ws.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: bitget.rs  book.rs  bybit.rs  coinex.rs  common.rs  gate.rs  kucoin.rs  lib.rs  mexc.rs  mock.rs  okx.rs  phemex.rs  util.rs
crates/domain/: Cargo.toml
crates/domain/src/: funding.rs  instrument.rs  lib.rs  spread.rs  traits.rs  transfer.rs  types.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs  manager.rs
crates/market_state/: Cargo.toml
crates/market_state/src/: aggregate.rs  dynamics.rs  lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: config_store.rs  lib.rs
crates/screener/: Cargo.toml
crates/screener/src/: chart.rs  config.rs  executable.rs  funding.rs  hysteresis.rs  lib.rs  rules.rs
crates/screener/tests/: pipeline.rs
crates/spread_tape/: Cargo.toml
crates/spread_tape/src/: lib.rs
crates/transfer_status/: Cargo.toml
crates/transfer_status/src/: fetchers.rs  lib.rs  poller.rs
crates/universe/: Cargo.toml
crates/universe/examples/: discover.rs
crates/universe/src/: fetchers.rs  lib.rs  poller.rs
deploy/: .env.example  Caddyfile  docker-compose.yml
docs/: ARB_SCREENER_SPEC.md  CLIENT_INTEGRATION.md  CLIENT_SETTINGS_REFERENCE.md  DEPLOY.md  EXCHANGE_ENDPOINTS.md  SPREAD_CHART_SERVER_SPEC.md
