[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
market_state.workspace = true
screener.workspace = true
universe.workspace = true
auth.workspace = true
axum.workspace = true
tokio.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
