[package]
name = "connectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
async-trait.workspace = true
anyhow.workspace = true
rand.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
