[package]
name = "domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true }

[dev-dependencies]
rust_decimal_macros.workspace = true
serde_json.workspace = true
