[package]
name = "persistence"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
screener.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[dev-dependencies]
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
