[package]
name = "screener"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
market_state.workspace = true
rust_decimal.workspace = true
dashmap.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
serde_json.workspace = true
connectors.workspace = true
tokio.workspace = true
