[package]
name = "transfer_status"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain.workspace = true
screener.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
